--- a/MVC/Properties/launchSettings.json
+++ b/MVC/Properties/launchSettings.json
@@ -4,13 +4,14 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:5001/",
-      "sslPort": 0
+      "sslPort": 44359
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "https://localhost:44359/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
